refactor: update meta tags for SEO optimization

--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.cdnfonts.com/css/montblanc" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/montblanc" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prolink</title>
-   
-                
+    <meta
+      name="description"
+      content="Proveedor de servicios de internet en Cúcuta, Colombia. Ofrecemos internet por fibra óptica e inalámbrico."
+    />
+    <meta
+      name="keywords"
+      content="Prolink, internet, fibra óptica, inalámbrico, Cúcuta, Colombia"
+    />
+    <meta name="author" content="Prolink Comunicaciones" />
+    <title>Prolink - Proveedor de Internet en Cúcuta, Colombia</title>
   </head>
 
-
-
-  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
